--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.1.2",
-    "nuxt-arch": "^0.0.6"
+    "nuxt": "^3.7.3",
+    "nuxt-arch": "0.1.0-beta.7"
   }
 }
