--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "nuxt": "^3.7.4",
-    "nuxt-arch": "0.1.0-beta.10"
+    "nuxt-arch": "0.1.0-beta.10",
+    "sass": "^1.80.6"
   }
 }
